Styling page select buttons

--- a/DragonBallV2.html
+++ b/DragonBallV2.html
@@ -1,11 +1,11 @@
 
 <div class="banner">
     <br><br><br>
-    <button type="action" name="act_attributes" >Attributes</button>
-    <button type="action" name="act_attacks" >Attacks</button>
-    <button type="action" name="act_abilities">Abilities</button>
-    <button type="action" name="act_transformations">Transformations</button>
-    <button type="action" name="act_settings">Settings</button>
+    <button class="select-btn" type="action" name="act_attributes" >Attributes</button>
+    <button class="select-btn" type="action" name="act_attacks" >Attacks</button>
+    <button class="select-btn" type="action" name="act_abilities">Abilities</button>
+    <button class="select-btn" type="action" name="act_transformations">Transformations</button>
+    <button class="select-btn" type="action" name="act_settings">Settings</button>
 </div>
 <input type='hidden' class='sheet-tabstoggle' name='attr_sheetTab'  value='attributes'  />
 <br>
@@ -124,7 +124,6 @@
                     <input type="hidden" value="0" name="attr_personality_tf">
                 </div>
                 <div class="save-table">
-                    <!--Impulsive (Agility), Corporeal (Tenacity), Cognitive (Insight), Morale (Personality)-->
                     <div class="save-name"><p>PROF. NAME</p></div>
                     <div class="save-misc"><p>MISC</p></div>
                     <div class="save-total"><p>TOTAL</p></div>
