Transformation Active Checkbox design tweeks, image upload

--- a/DragonBallV3.html
+++ b/DragonBallV3.html
@@ -937,7 +937,10 @@
                 <div class="transformations-header-mastered transformations-header transformations-hide-on-manifest transformations-hide-on-enchant">Mastered</div>
                 <div class="transformations-header-tier transformations-header">Tier</div>
                 <div class="transformations-header-stress transformations-header transformations-hide-on-manifest">Stress</div>
-                <input class="transformations-active transformations-hide-on-manifest" type="checkbox" name="attr_active" value="1">
+                <div class="transformations-active transformations-hide-on-manifest">
+                    <span class="transformations-active-span"></span>
+                    <input class="transformations-active-input" type="checkbox" name="attr_active" value="1">
+                </div>
                 <span class="transformations-name transformations-show" name="attr_name"></span>
                 <input class="transformations-name transformations-hide" type="text" name="attr_name" placeholder="Super Saiyan" />
                 <input class="transformations-stacks transformations-hide" type="number" name="attr_stacks" value="1" />
