More transformation active checkbox design tweeks

--- a/DragonBallV3.html
+++ b/DragonBallV3.html
@@ -938,8 +938,10 @@
                 <div class="transformations-header-tier transformations-header">Tier</div>
                 <div class="transformations-header-stress transformations-header transformations-hide-on-manifest">Stress</div>
                 <div class="transformations-active transformations-hide-on-manifest">
-                    <span class="transformations-active-span"></span>
-                    <input class="transformations-active-input" type="checkbox" name="attr_active" value="1">
+                    <input class="transformations-active-input" style="display:none;" type="checkbox" name="attr_active" value="1">
+                    <span class="transformations-active-span">
+                        <input class="transformations-active-input" type="checkbox" name="attr_active" value="1">
+                    </span>
                 </div>
                 <span class="transformations-name transformations-show" name="attr_name"></span>
                 <input class="transformations-name transformations-hide" type="text" name="attr_name" placeholder="Super Saiyan" />
